--- a/source/less/programs.less
+++ b/source/less/programs.less
@@ -59,6 +59,12 @@
     top: 89px;
     left: 446px;
   }
+  @media (min-width: @desktop-width) {
+    width: 100px;
+    height: 100px;
+    top: 47px;
+    left: 52px;
+  }
 }
 .programs__item--slim::after {
   position: absolute;
@@ -77,6 +83,11 @@
     top: 126px;
     left: 512px;
   }
+  @media (min-width: @desktop-width) {
+    transform: scale(1);
+    top: 39px;
+    left: 65px;
+  }
 }
 .programs__item--weight::after {
   position: absolute;
@@ -94,6 +105,11 @@
     transform: scale(2);
     top: 162px;
     left: 479px;
+  }
+  @media (min-width: @desktop-width) {
+    transform: scale(1);
+    top: 68px;
+    left: 35px;
   }
 }
 .programs__title {
